--- a/resources/main.css
+++ b/resources/main.css
@@ -231,14 +231,14 @@ body{
 }
 .service_col{
 	background-color: #222222;
-    border-radius: 135px;
+    border-radius: 100px;
     border: 2px solid #73AD21;
     padding: 77px 0px 0px 0px;
-    width: 279px;
+	width: 293px;
+	float: left;
     height: 266px;
-    float: left;
-	margin: 0px 0px 0px 95px;
-	color: white;
+    margin: 0px 50px 0px 50px;
+    color: white;
 }
 .service_col:hover{
 	border: 15px double #776040;
@@ -255,4 +255,47 @@ body{
 	margin: 0px 35px 0px 27px; 
 	color: #DADADA;
 	font: normal normal normal 14px/1 FontAwesome;
+}
+
+/************** Media Query ********************/
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+	
+	.contact_well{
+		height: 310px;
+	}
+} 
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+	.contact_well{
+		height: 190px;
+	}
+} 
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+	.contact_well{
+		height: 160px;
+	}
+} 
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+	.contact_well{
+		height: 100px;
+	}
+} 
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+	.contact_well{
+		height: 100px;
+	}
+}
+@media only screen and (min-width: 1575px) {
+	.contact_well{
+		height: 75px;
+	}
 }
