--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -232,7 +232,7 @@ body{
 /************** Media Query ********************/
 
 
-@media only screen and (max-width: 410px) {
+@media only screen and (max-width: 500px) {
 	
 	.name{
 		font-size: 20px;
@@ -356,7 +356,20 @@ body{
 	}
 }
 
-@media only screen and (min-width: 411px) {
+@media only screen and (min-width: 501px) {
+	.name{
+		font-size: 25px;
+		margin-top: 5px;
+		font-family: fantasy;
+	}
+	.degination{
+		padding-top: 45px;
+		font: normal normal normal 14px/1 FontAwesome;
+		position: absolute;
+		left: 0px;
+		font-size: 15px;
+		font-family: cursive;
+	}
 	.content-left img{
 		width: 100%;
 		height: 320px;
@@ -372,7 +385,7 @@ body{
 	}
 	.home_dis{
 		width: 100%;
-		padding-top: 0px;
+		padding-top: 20px;
 	}
 	.experience{
 		width: 100%;
@@ -404,6 +417,20 @@ body{
 		font-family: cursive;
 		font-size: 13px;
 	}
+	.protfolio_dis_application{
+		font-size: 13px;
+		float: left;
+		padding: 10px 0px 0px 0px;
+	}
+	.protfolio_dis_profile{
+		font-size: 8px;
+		padding: 5px 0px 0px 0px;
+	}
+	.protfolio_dis_app_dis{
+		font-size: 10px;
+		padding: 0px 0px 0px 0px;
+		margin: 0px 0px 0px 0px;
+	}
 	.cv embed{
 		width: 100%;
 		height: 500px;
@@ -418,8 +445,21 @@ body{
 	}
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 768px) {
 	
+	.name{
+		font-size: 25px;
+		margin-top: 5px;
+		font-family: fantasy;
+	}
+	.degination{
+		padding-top: 45px;
+		font: normal normal normal 14px/1 FontAwesome;
+		position: absolute;
+		left: 16px;
+		font-size: 15px;
+		font-family: cursive;
+	}
 	.content-left img{
 		width: 100%;
 		height: 320px;
